tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_empty.rs
//@ check-fail
//@ compile-flags: -Cpanic
//~? ERROR requires either `unwind`, `abort`, or `immediate-abort`

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
